--- a/web/package.json
+++ b/web/package.json
@@ -7,17 +7,24 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@testing-library/dom": "^10.4.0",
     "@types/node": "^24.9.1",
+    "@vitest/ui": "^3.0.5",
+    "jsdom": "^27.0.1",
     "solid-devtools": "^0.34.3",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.4",
-    "vite-plugin-solid": "^2.11.8"
+    "vite-plugin-solid": "^2.11.8",
+    "vitest": "^3.0.5"
   },
   "dependencies": {
     "solid-js": "^1.9.9"
