--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-dist
 .wrangler
 .output
 .vercel
@@ -11,7 +10,7 @@ app.config.timestamp_*.js
 .env*.local
 
 # dependencies
-/node_modules
+/web/node_modules
 
 # IDEs and editors
 /.idea
@@ -26,3 +25,6 @@ gitignore
 # System Files
 .DS_Store
 Thumbs.db
+
+# JSON schemas
+schemas/*
