--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,8 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "solid-js": "^1.9.9"
   }
 }
