--- a/config.toml
+++ b/config.toml
@@ -24,4 +24,4 @@ events_endpoint = "com.simplybusiness/events"
 #   "http://localhost:3000"
 #   "http://localhost:3000, http://localhost:8081"
 #   "http://example.com"
-allowed_origins = "http://localhost:3000"
+allowed_origins = "http://localhost:3000, http://localhost:4000"
