--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@testing-library/dom": "^10.4.0",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "^24.9.1",
     "@vitest/ui": "^3.0.5",
     "jsdom": "^27.0.1",
@@ -29,6 +30,8 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "dompurify": "^3.3.0",
+    "pretty-print-json": "^3.0.6",
     "solid-js": "^1.9.9"
   }
 }
